# git-kraken-workshop

./: .gitignore  README.md  pyproject.toml
src/git_kraken_workshop/: main.py
