[project]
name = "git-kraken-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Sheehan"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
poethepoet = "^0.40.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "uvicorn git_kraken_workshop.main:app --reload"
pytest = "pytest -v tests/ --junitxml=junit/test-results.xml --cov --cov-report=xml --cov-report=html"
ruff = "ruff check"
ruff_format = "ruff format --exit-non-zero-on-format"